<resources>
    <string name="app_name">TODO App</string>
    <string name="login_header">Welcome Back!</string>
    <string name="login_header2">Login to access your TodoList!</string>
    <string name="email">Email</string>
    <string name="email_hint">abc@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="loginbtn_text">login</string>
    <string name="remove_button">remove button</string>
</resources>